--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>XOX Game</title>
     <style>
         body {
@@ -10,8 +10,10 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background-image: url('background.png'); /* Arka plan görüntüsü */
+            background-image: url('background.png');
             background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center;
             margin: 0;
         }
         .board {
