--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             background-repeat: no-repeat;
             background-position: center;
             margin: 0;
+            overscroll-behavior: none; /* Prevents scrolling on iOS */
         }
         .board {
             display: grid;
@@ -32,8 +33,8 @@
             cursor: pointer;
         }
         .cell img {
-            width: 120px;
-            height: 120px;
+            max-width: 100%;
+            max-height: 100%;
         }
     </style>
 </head>
