--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>XOX Game</title>
     <style>
         body {
@@ -10,12 +10,9 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background-image: url('background.png');
+            background-image: url('background.png'); /* Arka plan görüntüsü */
             background-size: cover;
-            background-repeat: no-repeat;
-            background-position: center;
             margin: 0;
-            overscroll-behavior: none; /* Prevents scrolling on iOS */
         }
         .board {
             display: grid;
@@ -33,8 +30,8 @@
             cursor: pointer;
         }
         .cell img {
-            max-width: 100%;
-            max-height: 100%;
+            width: 120px;
+            height: 120px;
         }
     </style>
 </head>
